# simulations_python

./: .gitignore  02_bikeshare.ipynb  bikeshare.html  bikeshare.org  falling_penny_myth.ipynb  pyproject.toml
