[tool.poetry]
name = "simulations_python"
version = "0.1.0"
description = "Simulations with python"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.0"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
sympy = "^1.11"
Pint = "^0.19.2"
seaborn = "^0.11.2"
modsimpy = "^1.1.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
jupyterlab = "^3.4.5"
black = "^22.6.0"
pyflakes = "^2.5.0"
pytest = "^7.1.2"
isort = "^5.10.1"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
